miscTests/export_tests/invalid/nonconst_let.ml

type foo = | Pleh | Bleh
let%export x = Bleh

